syntax = "proto3";

package com.gl3.messaging;

service MessagingService {
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {}
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse) {}
}

message SendMessageRequest {
  string recipient = 1;
  string message = 2;
}

message SendMessageResponse {
  bool success = 1;
}

message GetMessagesRequest {
  string user = 1;
}

message GetMessagesResponse {
  repeated string messages = 1;
}